--- a/Back-end/DockerFile
+++ b/Back-end/DockerFile
@@ -1,5 +1,5 @@
 # Etapa 1: Build da aplicação com Maven
-FROM maven:3.9-openjdk-21 AS build
+FROM maven:3.9.6-eclipse-temurin-21-alpine AS build
 
 # Diretório de trabalho dentro do container
 WORKDIR /app
