--- a/Back-end/DockerFile
+++ b/Back-end/DockerFile
@@ -1,29 +1,14 @@
-# Etapa 1: Build da aplicação com Maven
 FROM maven:3.9.6-eclipse-temurin-21-alpine AS build
 
-# Diretório de trabalho dentro do container
 WORKDIR /app
-
-# Copia os arquivos do seu projeto para dentro do container
 COPY . .
 
-# Garante que o script mvnw tenha permissões de execução
-RUN chmod +x ./mvnw
+RUN chmod +x ./mvnw && ./mvnw clean package -DskipTests
 
-# Faz o build do projeto
-RUN ./mvnw clean package -DskipTests
-
-# Etapa 2: Execução da aplicação com OpenJDK 21
 FROM openjdk:21-jdk-slim
 
-# Define o diretório de trabalho para a execução
 WORKDIR /app
-
-# Copia o JAR gerado do build anterior
 COPY --from=build /app/target/hardft-0.0.1-SNAPSHOT.jar /app/hardft-0.0.1-SNAPSHOT.jar
 
-# Expondo a porta que sua aplicação vai rodar
 EXPOSE 8080
-
-# Comando para iniciar a aplicação
 ENTRYPOINT ["java", "-jar", "/app/hardft-0.0.1-SNAPSHOT.jar"]
