--- a/Back-end/DockerFile
+++ b/Back-end/DockerFile
@@ -3,7 +3,7 @@ FROM maven:3.9.6-eclipse-temurin-21-alpine AS build
 WORKDIR /app
 COPY . .
 
-RUN chmod +x ./mvnw && ./mvnw clean package -DskipTests
+RUN mvn clean package -DskipTests
 
 FROM openjdk:21-jdk-slim
 
