Atualizando Docker File 4

--- a/Back-end/DockerFile
+++ b/Back-end/DockerFile
@@ -1,14 +1,17 @@
 FROM maven:3.9.6-eclipse-temurin-21-alpine AS build
 
-WORKDIR /app
-COPY . .
-
-RUN mvn clean package -DskipTests
-
-FROM openjdk:21-jdk-slim
+COPY src /app/src
+COPY pom.xml /app
 
 WORKDIR /app
-COPY --from=build /app/target/hardft-0.0.1-SNAPSHOT.jar /app/hardft-0.0.1-SNAPSHOT.jar
+RUN mvn clean install -DskipTests
+
+FROM eclipse-temurin:21-jre-alpine
+
+WORKDIR /app
+
+COPY --from=build /app/target/hardft-0.0.1-SNAPSHOT.jar app.jar
 
 EXPOSE 8080
-ENTRYPOINT ["java", "-jar", "/app/hardft-0.0.1-SNAPSHOT.jar"]
+
+CMD ["java", "-jar", "app.jar"]
