Atualizando Docker File 5

--- a/Back-end/DockerFile
+++ b/Back-end/DockerFile
@@ -3,6 +3,8 @@ FROM maven:3.9.6-eclipse-temurin-21-alpine AS build
 COPY src /app/src
 COPY pom.xml /app
 
+RUN mvn dependency:go-offline
+
 WORKDIR /app
 RUN mvn clean install -DskipTests
 
