--- a/Back-end/src/main/resources/application.properties
+++ b/Back-end/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 spring.application.name=hardft
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:postgresql://ep-dawn-credit-acnbyabc-pooler.sa-east-1.aws.neon.tech/neondb?user=neondb_owner&password=npg_8Fk1uYBdERfo&sslmode=require
+spring.datasource.url=${DB_URL}
