--- a/Back-end/DockerFile
+++ b/Back-end/DockerFile
@@ -1,18 +1,18 @@
 FROM maven:3.9.6-eclipse-temurin-21-alpine AS build
 
-COPY src /app/src
-COPY pom.xml /app
+WORKDIR /app
 
+COPY pom.xml ./
 RUN mvn dependency:go-offline
 
-WORKDIR /app
+COPY src ./src
 RUN mvn clean install -DskipTests
 
 FROM eclipse-temurin:21-jre-alpine
 
 WORKDIR /app
 
-COPY --from=build /app/target/hardft-0.0.1-SNAPSHOT.jar app.jar
+COPY --from=build /app/target/*.jar app.jar
 
 EXPOSE 8080
 
